# charx1000-modbus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  read_energy_meters.py
.github/workflows/: docker-build.yml
